Added INDEX and SHOW Client-Side Movie Routes.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,8 @@ html(ng-app="moviesApp")
       button
         a(ui-sref='home') Home
       button
+        a(ui-sref='movies') Movies
+      button
         a(ui-sref='about') About
     main(ui-view='')
     block content
