Added NEW and CREATE Movie Routes

--- a/public/templates/movies/index.html
+++ b/public/templates/movies/index.html
@@ -5,3 +5,5 @@
     <a ui-sref="movieDetail({id: movie._id})">{{ movie.title }} - {{ movie.genre }}</a>
   </li>
 </ul>
+
+<button><a ui-sref="newMovie">Add Movie</button>
